--- a/css/main.css
+++ b/css/main.css
@@ -55,3 +55,10 @@ body {
 .username-input {
   box-shadow: 0px 0px 7px 0px #00000040;
 }
+.hero-section{
+  background-image: url(../images/header-img.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 1000px;
+}
+
